[tool.poetry]
name = "edustream-backend"
version = "1.0.0"
description = "EduStream Backend — Flask + Firebase Admin"
authors = ["Siddharth Grewal"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-cors = "^4.0.0"
firebase-admin = "^6.4.0"
requests = "^2.31.0"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
